# xpilot-fxi-cpp

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  bloodswithball.sh  bloodswithrobots.sh  bloodswithrobots_new.sh  bloodswithrobots_newmap.sh  cmake-build.sh  cmake-clean.sh  cmake-install.sh  config.h  config.h.in  configure  configure.ac  dodgers.sh  dodgersballs.sh  publicserver.sh
cmake/: config.h.in
share/: Makefile.am  Makefile.in  robots.txt
share/maps/: Makefile.am  Makefile.in  aimers.xp  teamcup.xp
src/: CMakeLists.txt  Makefile.in
src/common/: CMakeLists.txt  Makefile.am  Makefile.in  audio.h  bit.h  checknames.cpp  checknames.h  click.h  commonproto.h  const.h  debug.cpp  debug.h  draw.h  error.cpp  error.h  item.h  keys.h  list.cpp  list.h  math.cpp  net.cpp  net.h  pack.h  packet.h  portability.cpp  portability.h  randommt.cpp  rules.h  setup.h  shipshape.cpp  socklib.cpp  socklib.h  strcasecmp.cpp  strdup.cpp  strlcpy.cpp  structs.h  types.h  version.h  version.h.in  xpconfig.cpp  (+5 more)
src/server/: CMakeLists.txt  Makefile.am  Makefile.in  cmdline.cpp  collision.cpp  collision.h  command.cpp  contact.cpp  defaults.h  event.cpp  fileparser.cpp  fileparser.h  frame.cpp  frame.h  global.h  id.cpp  map.cpp  map.h  metaserver.cpp  metaserver.h  netserver.cpp  netserver.h  object.cpp  object.h  objpos.cpp  objpos.h  option.cpp  parser.cpp  parser.h  performance.cpp  player.cpp  player.h  player_inline.h  proto.h  rank.cpp  rank.h  robot.cpp  robot.h  robotdef.cpp  rules.cpp  (+19 more)
