AM_CPPFLAGS = -DCONF_DATADIR=\"$(pkgdatadir)/\"
noinst_LIBRARIES = libxpcommon.a
libxpcommon_a_SOURCES = \
audio.h bit.h checknames.c checknames.h commonproto.h xpconfig.c xpconfig.h const.h debug.c debug.h draw.h error.c error.h item.h keys.h list.c list.h math.c net.c net.h packet.h pack.h portability.c portability.h randommt.c rules.h setup.h shipshape.c socklib.c socklib.h strcasecmp.c strdup.c strlcpy.c structs.h types.h version.h xpmemory.c

